Alteração no layout principal.

--- a/style.css
+++ b/style.css
@@ -167,3 +167,7 @@ main section {
     clip-path: circle(800px at right 1000px);
 
 }
+
+.main-text .content span:hover {
+    background-color: #f0f0f0; /* Cor ao passar o mouse */
+}
