--- a/style.css
+++ b/style.css
@@ -243,9 +243,11 @@ main section {
 }
 
 
+
 .text-conteudo {
     display: flex;
     flex-direction: column;
+   align-items: center;
    
     
 }
@@ -265,7 +267,7 @@ main section {
 }
 
 .img-ipad img {
-    width: 35em;
+    width: 40rem;
     margin-left: 40rem;
     margin-top: 0;
     margin-bottom: 3vh;
