--- a/style.css
+++ b/style.css
@@ -49,14 +49,17 @@ header{
     display: flex;
     align-items: center;
     gap: 40px;
+   
 
 }
 
 .navigation ul li a{
     color: #888;
     font-weight: 600;
-    padding: 4px;
+    padding: 10px;
     transition: all 0.5 ease-in-out;
+    display: block;
+   
 }
 
 .navigation ul li a:hover{
@@ -64,11 +67,23 @@ header{
     border-bottom: 1px solid #fff;
 }
 
-.navigation .check {
-    color: #fff;
-    border-bottom: 1px solid #fff;
+.dropdown-menu{
+   
+    position: absolute;
+   
+    display: none;
+}
+
+.dropdown-menu a {
+    background-color:#1d1d1f;
+    display: block;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
 
 }
+
 
 /*Main*/
 
@@ -247,7 +262,7 @@ main section {
 .text-conteudo {
     display: flex;
     flex-direction: column;
-   align-items: center;
+   
    
     
 }
@@ -267,7 +282,7 @@ main section {
 }
 
 .img-ipad img {
-    width: 40rem;
+    width: 35rem;
     margin-left: 40rem;
     margin-top: 0;
     margin-bottom: 3vh;
