--- a/style.css
+++ b/style.css
@@ -28,8 +28,10 @@ body {
 }
 
 header{
+    position: relative; 
     padding: 15px 70px;
-    background-color: #1d1d1f;
+    background-color: black;
+    z-index: 10; 
 
 }
 
@@ -70,13 +72,14 @@ header{
 .dropdown-menu{
    
     position: absolute;
-   
     display: none;
+   
 }
 
 .dropdown-menu a {
     background-color:#1d1d1f;
     display: block;
+    
 }
 
 .dropdown:hover .dropdown-menu {
@@ -183,7 +186,7 @@ main section {
 
 .main-img img {
     width: 500px;
-    transform:rotate(-7deg)
+    transform:rotate(-5deg)
 }
 
 .circle{
@@ -287,3 +290,53 @@ main section {
     margin-top: 0;
     margin-bottom: 3vh;
 } 
+
+
+.video-iphone {
+    
+    top: 0px;
+    left: 0;
+    width: 100%;
+    
+    overflow: hidden;
+  }
+  
+  .video-iphone video {
+    
+    width: 100%;
+    height: 50%;
+    object-fit: cover;  
+    z-index: -1; 
+  }
+
+
+  
+
+.iphone16-text{
+    display: flex;
+    gap:0;
+    flex-direction: column;
+}
+
+.iphone16-text h1
+{
+    font-size: 3.5rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    margin-top: 0;
+}
+  .iphone16-text img{
+    width: 100rem;
+    
+    margin-top:0;
+    padding-left: 20rem;
+  }
+
+  .iphone16-text .btn {
+    padding: 10px 25px;
+    background-color: #0071e3;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 1.5rem;
+    transition: all 0.5s;
+  }
